# PyCOM

./: ARCHITECTURE_ANALYSIS.md  README.md  README_EN.md  REFACTORING_SUMMARY.md  ReleaseNote.txt  about.py  data_handler.py  file_handler.py  globalvar.py  jsonparser.py  logwrapper.py  main.py  pyproject.toml  requirements.txt  serial_manager.py  switchbt.py  togglebt.py  togglebt_bk.py
resrc/: resource.qrc  resource_rc.py
ui/: about.ui  about_ui.py  mainwindow.ui  mainwindow_ui.py
