[project]
name = "PyCOM"
version = "1.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=5.2.0",
    "pyserial>=3.5",
    "pyside6>=6.10.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
